--- a/cloudfunctions/getCosSecret/package.json
+++ b/cloudfunctions/getCosSecret/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "addFestival",
+  "name": "getCosSecret",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "latest"
+    "wx-server-sdk": "latest",
+    "qcloud-cos-sts": "latest"
   }
 }
