--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,11 +1,11 @@
 {
   "pages": [
-    "pages/lunar/lunar",
     "pages/calendar/calendar",
     "pages/countdown/countdown",
     "pages/user/user",
     "pages/userFestival/userFestival",
-    "pages/addFestival/addFestival"
+    "pages/addFestival/addFestival",
+    "pages/lunar/lunar"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
